--- a/candidato/templates/candidato/home.html
+++ b/candidato/templates/candidato/home.html
@@ -11,17 +11,26 @@
     <title>Cadastro de Candidato</title>
   </head>
   <body>
-    <h1>Cadastro de Candidato</h1>
+    <nav style="background-color: #0d6efd !important;" class="navbar sticky-top navbar-light bg-light">
+        <div class="container-fluid">
+            <a style="color:azure !important;" class="navbar-brand mb-0" href="#">Cadastro de Candidato</a>
+        </div>
+    </nav>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <form class="m-5" action="{% url 'listagem_candidatos' %}" method="post">
+        <h2>Cadastra para a vaga X</h2>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="input-email" name="email">
+        </div>
+        <div class="mb-3">
+            <label for="senha" class="form-label">Senha</label>
+            <input type="password" class="form-control" id="input-senha" name="senha">
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
