--- a/candidato/templates/candidato/home.html
+++ b/candidato/templates/candidato/home.html
@@ -1,68 +1,47 @@
-<!doctype html>
-<html lang="pt-br">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'candidato/base.html' %}
+{% block conteudo %}
+<form class="m-5" action="{% url 'candidatos' %}" method="post">
+    {% csrf_token %}
+    <h2>Cadastro Candidato</h2>
+    <div class="mb-3">
+        <label for="nome" class="form-label">Nome</label>
+        <input name="nome" type="text" class="form-control" id="input-email">
+    </div>
+    <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input name="email" type="email" class="form-control" id="input-email">
+    </div>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <div class="mb-3">
+        <label for="senha" class="form-label">Senha</label>
+        <input name="senha" type="password" class="form-control" id="input-senha">
+    </div>
 
-    <title>Cadastro de Candidato</title>
-  </head>
-  <body>
-    <nav style="background-color: #0d6efd !important;" class="navbar sticky-top navbar-light bg-light">
-        <div class="container-fluid">
-            <a style="color:azure !important;" class="navbar-brand mb-0" href="#">Cadastro de Candidato</a>
-        </div>
-    </nav>
+    <div class="mb-3">
+        <label for="idade" class="form-label">idade</label>
+        <input name="idade" type="text" class="form-control" id="input-idade">
+    </div>
 
-    <form class="m-5" action="{% url 'candidatos' %}" method="post">
-        {% csrf_token %}
-        <h2>Cadastro Candidato</h2>
-        <div class="mb-3">
-            <label for="nome" class="form-label">Nome</label>
-            <input name="nome" type="text" class="form-control" id="input-email">
-        </div>
-        <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input name="email" type="email" class="form-control" id="input-email">
-        </div>
+    <div class="mb-3">
+      <div class="form-floating">
+        <select name="ult_escolaridade" class="form-select" id="floatingSelectGrid" aria-label="Floating label select example">
+          <option selected></option>
+          <option value="1">Ensino fundamental</option>
+          <option value="2">Ensino médio</option>
+          <option value="3">Tecnólogo</option>
+          <option value="4">Ensino Superior</option>
+          <option value="5">Pós / MBA / Mestrado</option>
+          <option value="6">Doutorado</option>
+        </select>
+        <label for="floatingSelectGrid">Selecione sua Escolaridade:</label>
+      </div>
+    </div>
 
-        <div class="mb-3">
-            <label for="senha" class="form-label">Senha</label>
-            <input name="senha" type="password" class="form-control" id="input-senha">
-        </div>
-
-        <div class="mb-3">
-            <label for="idade" class="form-label">idade</label>
-            <input name="idade" type="text" class="form-control" id="input-idade">
-        </div>
-
-        <div class="mb-3">
-          <div class="form-floating">
-            <select name="ult_escolaridade" class="form-select" id="floatingSelectGrid" aria-label="Floating label select example">
-              <option selected></option>
-              <option value="1">Ensino fundamental</option>
-              <option value="2">Ensino médio</option>
-              <option value="3">Tecnólogo</option>
-              <option value="4">Ensino Superior</option>
-              <option value="5">Pós / MBA / Mestrado</option>
-              <option value="6">Doutorado</option>
-            </select>
-            <label for="floatingSelectGrid">Selecione sua Escolaridade:</label>
-          </div>
-        </div>
-
-        <label for="floatingTextarea2">Experiência</label>
-        <div class="form-floating mb-3">
-          <textarea name="experiencia" class="form-control" placeholder="null" id="floatingTextarea2" style="height: 100px" maxlength="500"></textarea>
-          <label for="floatingTextarea2">Diga sua experiência</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
-    </form>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
-</html>
+    <label for="floatingTextarea2">Experiência</label>
+    <div class="form-floating mb-3">
+      <textarea name="experiencia" class="form-control" placeholder="null" id="floatingTextarea2" style="height: 100px" maxlength="500"></textarea>
+      <label for="floatingTextarea2">Diga sua experiência</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Enviar</button>
+</form>
+{% endblock %}
