--- a/candidato/templates/candidato/listagem_candidatos.html
+++ b/candidato/templates/candidato/listagem_candidatos.html
@@ -1,41 +1,24 @@
-<!doctype html>
-<html lang="pt-br">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'candidato/base.html' %}
+{% block conteudo %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<h1>Lista de Usuarios</h1>
+<table class="table table-bordered table-striped m-5">
+    <tr>
+        <th>id</th>
+        <th>nome</th>
+        <th>idade</th>
+        <th>ult_escolaridade</th>
+        <th>experiencia</th>
+    </tr>
+    {% for usuario in usuarios %}
+    <tr>
+        <td>{{usuario.id}}</td>
+        <td>{{usuario.nome}}</td>
+        <td>{{usuario.idade}}</td>
+        <td>{{usuario.ult_escolaridade}}</td>
+        <td>{{usuario.experiencia}}</td>
+    </tr>
+    {% endfor %}
+</table>
 
-    <title>Listagens Usuários</title>
-  </head>
-  <body>
-    <nav style="background-color: #0d6efd !important;" class="navbar sticky-top navbar-light bg-light">
-        <div class="container-fluid">
-            <a style="color:azure !important;" class="navbar-brand mb-0" href="#">Cadastro de Candidato</a>
-        </div>
-    </nav>
-
-    <table>
-        <tr>
-            <th>id</th>
-            <th>nome</th>
-            <th>idade</th>
-            <th>ult_escolaridade</th>
-            <th>experiencia</th>
-        </tr>
-        {% for usuario in usuarios %}
-        <tr>
-            <td>{{usuario.id}}</td>
-            <td>{{usuario.nome}}</td>
-            <td>{{usuario.idade}}</td>
-            <td>{{usuario.ult_escolaridade}}</td>
-            <td>{{usuario.experiencia}}</td>
-        </tr>
-        {% endfor %}
-    </table>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% endblock %}
